# website

./: .gitignore
.github/workflows/: build.yml
.metals/: metals.mv.db
capibara-website/: .gitignore  Cargo.toml  Shuttle.toml  schema.sql
capibara-website-scala-old/: .gitignore  build.sbt  build.sc
capibara-website-scala-old/app/controllers/v1/: CapibaraController.scala
capibara-website-scala-old/app/dtos/: HeaderDetail.scala
capibara-website-scala-old/app/models/: Function.scala
capibara-website/.metals/: metals.lock.db  metals.mv.db
capibara-website/app/: ErrorHandler.scala
capibara-website/app/controllers/v1/: CapibaraController.scala
capibara-website/app/dtos/: RefResult.scala  SearchResult.scala
capibara-website/app/models/: CapibaraDocument.scala  Enum.scala  Function.scala  Header.scala  Macro.scala  Struct.scala  Typedef.scala
capibara-website/conf/: application.conf  routes
capibara-website/src/: main.rs
capibara-website/src/controllers/v1/: capibara_controller.rs  mod.rs
capibara-website/src/dtos/: header_detail.rs  mod.rs  ref_result.rs  search_result.rs
capibara-website/src/infrastructure/: auth_token.rs  document.rs  mod.rs
capibara-website/src/models/: _macro.rs  _struct.rs  document.rs  enumeration.rs  function.rs  header.rs  mod.rs  typedef.rs
clientapp/: package-lock.json  package.json
clientapp/public/: index.html  manifest.json
clientapp/src/: App.js  index.css  index.js
clientapp/src/components/: Footer.js  Header.js
clientapp/src/pages/: About.js  Capi.js  Docs.js  Home.js  Plugins.js
(+13 files in other folders)
