[package]
name = "capibara-website"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
shuttle-rocket = "0.55.0"
shuttle-runtime = "0.55.0"
tokio = "1.26.0"
serde = {version = "1", features = ["derive"]}
shuttle-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
